<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16"
    android:background="@color/background_color"
    >

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="329dp"
        android:layout_height="131dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/fpt_kitchen"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/SignUpForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_below="@+id/image_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/signup_form_title"
        android:textSize="@dimen/text_size24"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <!-- Updated EditText to handle both email and phone -->
    <EditText
        android:id="@+id/email_or_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SignUpForm"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="16dp"
        android:hint="Email/Số điện thoại"
        android:inputType="textEmailAddress|phone"
        android:minHeight="@dimen/margin_48"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_or_phone"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="16dp"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:minHeight="@dimen/margin_48"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/st_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_16"
        android:hint="@string/password_hint"
        android:imeActionLabel="st_Passcore"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="@dimen/margin_48"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/end_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/st_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_16"
        android:hint="@string/confirm_password_hint"
        android:imeActionLabel="end_Passcore"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="@dimen/margin_48"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_64"
        android:text="Đăng ký"
        android:layout_below="@+id/end_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:enabled="true"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_16"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/Yes_Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_login"
        android:layout_marginTop="@dimen/margin_16"
        android:text="Đã có tài khoản? chọn Đăng nhập"
        android:layout_centerHorizontal="true" />

    <!-- Layout chứa đường kẻ và chữ "Or" -->
    <LinearLayout
        android:id="@+id/or_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Yes_Account"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="horizontal"
        android:gravity="center">

        <!-- Đường kẻ bên trái -->
        <View
            android:layout_width="@dimen/margin_0"
            android:layout_height="@dimen/height_1"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_16"
            android:background="@color/black" />

        <!-- TextView "Or" -->
        <TextView
            android:id="@+id/Or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:text="@string/or_text"
            android:textSize="@dimen/text_size20"
            android:textStyle="bold" />

        <!-- Đường kẻ bên phải -->
        <View
            android:layout_width="@dimen/margin_0"
            android:layout_height="@dimen/height_1"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/re_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="19dp"
        android:enabled="true"
        android:text="@string/relogin_button_text" />

</RelativeLayout>
